perfectly working cluster